--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="5d1ttTzctPaE69b9SufHspxMsRnzUN92qLqrSDoGdfM" />
     <title>AI Essay Writer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/assets/images/AILogo.png" type="image/png" />
+    <link rel="icon" href="assets/images/AILogo.png" type="image/png" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css" />
 </head>
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <div class="navbar-container" id="navbar-container">
                     <div class="logo">
-                        <a href="/index.html"> <img src="/assets/images/AiLogo.png" alt="AIContentWriter" /></a>
+                        <a href="/index.html"> <img src="assets/images/AiLogo.png" alt="AIContentWriter" /></a>
                         <span>Ai Writer</span>
                     </div>
                     <ul class="nav-links" id="nav-links">
@@ -165,7 +165,7 @@
             <div class="footerMain">
                 <div class="footerMainContainer">
                     <div class="footerLogo">
-                        <img src="/assets/images/AiFooter.png" alt="AiFooter">
+                        <img src="assets/images/AiFooter.png" alt="AiFooter">
                         <span>Ai Writer </span>
                     </div>
                     <div class="footerPoints">
