--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="5d1ttTzctPaE69b9SufHspxMsRnzUN92qLqrSDoGdfM" />
     <title>AI Essay Writer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/images/AILogo.png" type="image/png" />
+    <link rel="icon" href="assets/images/AiLogo.png" type="image/png" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css" />
     <!-- Link Swiper's CSS -->
