--- a/userTerms.html
+++ b/userTerms.html
@@ -180,11 +180,11 @@
                         </p>
                         <div class="footerTermsAndPrivacy">
                             <p>
-                                <a href="/privacyPolicy.html">Privacy Policy</a>
+                                <a href="privacyPolicy.html">Privacy Policy</a>
                             </p>
                             <i class="fa-solid fa-circle"></i>
                             <p>
-                                <a href="/userTerms.html">User Terms & Conditions</a>
+                                <a href="userTerms.html">User Terms & Conditions</a>
                             </p>
                         </div>
                     </div>
